2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/15_AsmBodyAvecParamInt.deca
// Description:
//    Programme : utilisation de asm avec la methode avec params
// Resultats:
//      Programme correcte
//
// Historique:
//    cree le 16/01/2024
class A {
    protected int x;
    void get(int x) asm (
        "hello \' world"
    );
}